[package]
name = "aperture-server"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "fs-all", "shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.71"
blurhash = "0.1.1"
rocket = { version = "=0.5.0-rc.3", features = ["json","tls"] }
rocket-include-static-resources = "0.10.3"
rocket-multipart-form-data = "0.10.5"
rocket-raw-response = "0.5.2"
surrealdb = { version = "1.0.0-beta.9", features = [ "kv-rocksdb"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
chrono = "0.4.25"
uuid = "1.3.3"
sha2 = "0.10.6"
mime = "0.3.17"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
